kubernetes-manifests/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accountservice
spec:
  selector:
    matchLabels:
      app: accountservice
  template:
    metadata:
      labels:
        app: accountservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: accountservice
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 180Mi
          limits:
            cpu: 300m
            memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: accountservice
spec:
  type: ClusterIP
  selector:
    app: accountservice
  ports:
  - name: http
    port: 80
    targetPort: 8080
