kubernetes-manifests/account-servicecopy.yaml

apiVersion: v1
kind: Service
metadata:
  name: accountservice
spec:
  type: LoadBalancer
  selector:
    app: accountservice
  ports:
  - name: http
    port: 80
    targetPort: 8080
