kubernetes-manifests/balance-sheet-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panel-admin-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: panel-admin-mongo
  template:
    metadata:
      labels:
        component: panel-admin-mongo
    spec:
      volumes:
        - name: panel-admin-mongo-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: panel-admin-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: panel-admin-mongo-storage
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: balance-mongodb
spec:
  type: LoadBalancer
  selector:
    component: panel-admin-mongo
  ports:
    - port: 27017
      targetPort: 27017
