kubernetes-manifests/balance-sheet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balancesheet
spec:
  selector:
    matchLabels:
      app: balancesheet
  template:
    metadata:
      labels:
        app: balancesheet
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: balancesheet
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 180Mi
          limits:
            cpu: 300m
            memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: balancesheet
spec:
  type: LoadBalancer
  selector:
    app: balancesheet
  ports:
  - name: http
    port: 80
    targetPort: 3000
