kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          serviceName: accountservice
          servicePort: 80
      - path: /api/balance
        pathType: Prefix
        backend:
          serviceName: balancesheet
          servicePort: 80
      - backend:
          serviceName: frontend
          servicePort: 80
